# crypto

./: Application.cpp  Application.h  BackTester.h  CMakeLists.txt  Engine.cpp  Engine.h  a.csv  kospi.csv  main.cpp  yea.csv
data/: Candle.h  CsvReader.cpp  CsvReader.h
indicators/: Indicators.hpp
